[gd_scene load_steps=5 format=2]

[ext_resource path="res://Engine/Hud/Ttf/aire_exterior/AireExterior.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Engine/MainScenes/StartMenu/Textures/OptionPointerOff.png" type="Texture" id=2]
[ext_resource path="res://Engine/MainScenes/StartMenu/OptionElement/OptionElement.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="OptionElement" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionPointer" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 600.0
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 36.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExecTween" type="Tween" parent="."]
